# webServer

./: CMakeLists.txt
src/: file.c  htmlCreator.c  htmlCreator.h  main  mime.c  net.c  server.c
src/serverfiles/: changeChecker.js  clienteTerminal.c  sumaMD5.txt
src/serverroot/: admin.html  adminLogin.html  auxilioMeDesmayo.xml  despacito.html  despacito.xml  despacito2.xml  estilos.css  index.html  indexFoot.html  indexHeader.html  indexadministrador.html  nada.xml  noEsTrumpNiObama.xml  slideshow.html  wapisrun.xml
src/serverroot/assets/images/: hashes.json
src/serverroot/assets/mobirise/css/: mbr-additional.css
